--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite",
+  "name": "lexio_online",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.5.17",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-vue": "^6.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.3",
+    "vite": "^7.0.4"
   }
 }
