--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.0.0"
   },
